--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: cub3d
     image: app
     stdin_open: true
     tty: true
@@ -10,3 +11,6 @@ services:
       - type: bind
         source: .
         target: /app
+    # environment:
+    #   - ASAN_OPTIONS=detect_leaks=1
+    #   - LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libasan.so.6
