--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
+# services:
+#   app:
+#     build:
+#       dockerfile: Dockerfile
+#     image: app
+#     stdin_open: true
+#     tty: true
+#     volumes:
+#       - type: bind
+#         source: .
+#         target: /app
+version: '3'
 services:
   app:
     build:
-      dockerfile: Dockerfile
-    image: app
+      context: .
+    image: multi-terminal
     stdin_open: true
     tty: true
     volumes:
