--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
-# services:
-#   app:
-#     build:
-#       dockerfile: Dockerfile
-#     image: app
-#     stdin_open: true
-#     tty: true
-#     volumes:
-#       - type: bind
-#         source: .
-#         target: /app
-version: '3'
 services:
   app:
     build:
-      context: .
-    image: multi-terminal
+      dockerfile: Dockerfile
+    image: app
     stdin_open: true
     tty: true
     volumes:
